codex-src/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_setup_popup_rate_limits.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
assertion_line: 274
expression: status_line_popup_snapshot(&mut chat)
---
  Configure Status Line
  Select which items to display in the status line.

  Type to search
  >
› [x] Use theme colors      Apply colors from the active /theme
  ───────────────────────
  [x] monthly-limit         Remaining usage on the monthly usage limit (omitted when unavailable)
  [x] weekly-limit          Remaining usage on the weekly usage limit (omitted when unavailable)
  [ ] model                 Current model name
  [ ] model-with-reasoning  Current model name with reasoning level
  [ ] reasoning             Current reasoning level
  [ ] current-dir           Current working directory
  ───────────────────────
  ➤ Save status line (3 selected)
  ✕ Discard changes

  monthly 65% left · weekly 50% left
  Press enter to select; ←/→ to move; tab then enter to confirm or discard; esc to close
